--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@casl/ability": "^6.0.0",
+    "aws-sdk": "^2.1312.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
@@ -24,6 +25,7 @@
     "module-alias": "^2.2.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.3"
   },
@@ -35,6 +37,7 @@
     "@middlewares": "./middlewares",
     "@utils": "./utils",
     "@validations": "./validations",
-    "@images": "./public/images"
+    "@images": "./public/images",
+    "@config": "./config"
   }
 }
