--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,9 @@
 JWT_SECRET_KEY="NGELU-ngelu-NGELU"
 BCRYPT_SALT = "8"
 
-AWS_ACCESS_KEY_ID = "AKIAT5DG53MFG4MXMEVS"
-AWS_SECRET_ACCESS_KEY= "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"
+AWS_ACCESS_KEY_ID = "AKIAT5DG53MFONHAV3NC"
+AWS_SECRET_ACCESS_KEY= "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"
 AWS_REGION = "ap-southeast-1"
-AWS_BUCKET_NAME = "hotel-wikusama"
+AWS_BUCKET_NAME = "wikusama-hotel"
 
 PORT="8080"
