--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.21.3"
+    "sequelize": "^6.21.3",
+    "sharp": "^0.31.3"
   },
   "_moduleAliases": {
     "@root": ".",
